--- a/Commentium.Client/src/app/comments/components/comment/comment.component.html
+++ b/Commentium.Client/src/app/comments/components/comment/comment.component.html
@@ -1,47 +1,3 @@
-<!-- <div class="comment">
-    <div class="comment-image-container">
-        <img src="/assets/user-icon.png" />
-    </div>
-    <div class="comment=right-part">
-        <div class="comment-content">
-            <div class="comment-author">{{comment.userName}}</div>
-        </div>
-        <div class="comment-text">{{comment.text}}</div>
-        <div class="comment-actions">
-            <div 
-                class="comment-action"
-                (click)="setActiveComment.emit(comment)">Reply
-            </div>
-        </div>
-        <comment-form
-            *ngIf="isReplying()"
-            submitLabel="Reply"
-            [hasCancelButton]="true"
-            (handleCancel)="setActiveComment.emit(null)"
-            (handleSubmit)="addComment.emit({
-                userName: $event.userName,
-                email: $event.email,
-                commentContent: $event.commentContent,
-                verifiedFile: $event.verifiedFile,
-                parentId: comment.commentId})"
-        ></comment-form>
-        <div class="replies" *ngIf="comment.replies.length > 0">
-            <comment
-                *ngFor="let reply of comment.replies"
-                [comment]="reply"
-                (setActiveComment)="setActiveComment.emit($event)"
-                [activeComment]="activeComment"
-                (addComment)="addComment.emit({
-                    userName: $event.userName,
-                    email: $event.email,
-                    commentContent: $event.commentContent,
-                    verifiedFile: $event.verifiedFile,
-                    parentId: comment.commentId})"
-            ></comment>
-        </div>
-    </div>
-</div> -->
-
 
 <div class="comment">
     <div class="comment-header">
@@ -60,9 +16,19 @@
   
     <div class="comment-body">
       <div class="comment-text" [innerHTML]="comment.text"></div>
-      <div class="comment-actions">
+
+      <image-preview
+        [deleteButton]="false"
+        [imageFile]="imageFile"
+      ></image-preview>
+
+      <text-file-preview
+        [deleteButton]="false"
+        [textFile]="textFile"
+      ></text-file-preview>
+
+      <div class="reply-form-container" *ngIf="isReplying()">
         <comment-form
-          *ngIf="isReplying()"
           submitLabel="Reply"
           [hasCancelButton]="true"
           (handleCancel)="setActiveComment.emit(null)"
@@ -74,17 +40,6 @@
             parentId: comment.commentId})"
         ></comment-form>
       </div>
-
-
-    <image-preview
-        [deleteButton]="false"
-        [imageFile]="imageFile"
-    ></image-preview>
-
-    <text-file-preview
-        [deleteButton]="false"
-        [textFile]="textFile"
-    ></text-file-preview>
 
     </div>
   </div>
@@ -100,19 +55,6 @@
         email: $event.email,
         commentContent: $event.commentContent,
         verifiedFile: $event.verifiedFile,
-        parentId: comment.commentId})"
+        parentId: $event.parentId})"
     ></comment>
   </div>
-
-<!-- <comment-form
-    *ngIf="isReplying()"
-    submitLabel="Reply"
-    [hasCancelButton]="true"
-    (handleCancel)="setActiveComment.emit(null)"
-    (handleSubmit)="addComment.emit({
-        userName: $event.userName,
-        email: $event.email,
-        commentContent: $event.commentContent,
-        verifiedFile: $event.verifiedFile,
-        parentId: comment.commentId})"
-></comment-form> -->
